--- a/index.html
+++ b/index.html
@@ -1,95 +1,153 @@
 <!doctype html>
-<html class="no-js" lang="">
-	
+
+<html class="no-js"lang="en">
+
 	<head>
+
+		<title>Home &middot; Future&Co.</title>
 		<meta charset="utf-8">
-		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title></title>
-		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="X-UA-Compatible" content="chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Future&#38;Co.are an digital production company creating award winning work in film, animation, web and mobile for agencies and brands all over the world.">
+		<meta name="author" content="Future&#38;Co. Ltd.">
+		<meta name="robots" content="INDEX,FOLLOW">
+		<meta name="apple-mobile-web-app-title" content="F&Co">
+
+		<link rel="canonical" href="">
+
+		<!-- CSS -->
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+
+		<!-- Favicon -->
+		<link rel="shortcut icon" type="image/ico" href="favicon.ico">
+		<link rel="shortcut icon" href="favicon.png" sizes="32x32">
+
+		<!--iOS -->
+		<link rel="apple-touch-icon" href="/img/site/apple-touch-icon-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/site/apple-touch-icon-72x72-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/site/apple-touch-icon-114x114-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/site/apple-touch-icon-144x144-precomposed.png">
+
+		<!-- Facebook/Twitter -->
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="@futureandco">
+		<meta name="twitter:url" property="og:url" content="https://futureandco.tv/">
+		<meta name="twitter:title" property="og:title" content="Film Production, Website Design &#38; Development by Future&#38;Co.">
+		<meta name="twitter:description" property="og:description" content="Future&#38;Co. are an integrated digital production company creating award winning work in film, animation, web and mobile for agencies and brands all over the world.">
+		<meta name="twitter:image" property="og:image" content="https://futureandco.tv/img/site/social-logo.png">
+
+		<!-- Windows -->
+		<meta name="msapplication-TileColor" content="#0d0f0f">
+		<meta name="msapplication-TileImage" content="/img/site/apple-touch-icon-144x144-precomposed.png">
+
+		<!-- Fonts -->
+		<script src="https://use.typekit.net/jyk2iht.js"></script>
+		<script>try{Typekit.load({ async: true });}catch(e){}</script>
 		
-		<link rel="apple-touch-icon" href="apple-touch-icon.png">
-		<!-- Place favicon.ico in the root directory -->
-		
-		<link rel="stylesheet" href="css/main.css">
-		
+		<!-- Script -->
+		<script src="js/modernizr-2.8.3.min.js"></script>
+
+		<!--[if lt IE 9]>
+			<script>
+				document.createElement('video');
+			</script>
+		<![endif]-->
+
 	</head>
-		
+
 	<body>
 		
-		<header class="page-head">
-			<img src="img/interface/logo.png" srcset="img/interface/logo@2x.png 2x" alt="Stephen Moy - Designer & front-end developer" class="page-head__logo" />
-		</header>
-				
-		<ul class="work">
-			<li class="work__item">
-				<a href="#" class="work__image-wrap">
-					<img src="img/content/thumbnails/beatsuite.jpg" alt="BeatSuite" />
-				</a>
-				<h2 class="work__title"><a href="#">BeatSuite</a></h2>
-				<p class="work__desc">Web design / front-end development</p>
-			</li>
-			<li class="work__item">
-				<a href="#" class="work__image-wrap">
-					<img src="img/content/thumbnails/great-british-meat.jpg" alt="Great British Meat Co." />
-				</a>
-				<h2 class="work__title"><a href="#">Great British Meat Co.</a></h2>
-				<p class="work__desc">Web design / front-end development</p>
-			</li>
-			<li class="work__item">
-				<a href="#" class="work__image-wrap">
-					<img src="img/content/thumbnails/pokerstars.jpg" alt="PokerStars.tv" />
-				</a>
-				<h2 class="work__title"><a href="#">PokerStars.tv</a></h2>
-				<p class="work__desc">Design, Front-end development</p>
-			</li>
-			<li class="work__item">
-				<a href="#" class="work__image-wrap">
-					<img src="img/content/thumbnails/metropolis-pictures.jpg" alt="Metropolis Pictures" />
-				</a>
-				<h2 class="work__title"><a href="#">Metropolis Pictures</a></h2>
-				<p class="work__desc">Design / Front-end development</p>
-			</li>
-			<li class="work__item">
-				<a href="#" class="work__image-wrap">
-					<img src="img/content/thumbnails/dene.jpg" alt="Dene" />
-				</a>
-				<h2 class="work__title"><a href="#">Dene</a></h2>
-				<p class="work__desc">Brand / web design / front-end development</p>
-			</li>
-			<li class="work__item">
-				<a href="#" class="work__image-wrap">
-					<img src="img/content/thumbnails/dartmoor.jpg" alt="Dartmoor - moor than meets the eye" />
-				</a>
-				<h2 class="work__title"><a href="#">Moor than meets the eye</a></h2>
-				<p class="work__desc">Design / pitch work</p>
-			</li>
-			<li class="work__item">
-				<a href="#" class="work__image-wrap">
-					<img src="img/content/thumbnails/oobe.jpg" alt="oobe" />
-				</a>
-				<h2 class="work__title"><a href="#">oobe</a></h2>
-				<p class="work__desc">Web design, front-end development</p>
-			</li>
-			<li class="work__item">
-				<a href="#" class="work__image-wrap">
-					<img src="img/content/thumbnails/oca.jpg" alt="Open College for the Arts" />
-				</a>
-				<h2 class="work__title"><a href="#">Open College for the Arts</a></h2>
-				<p class="work__desc">Front-end development</p>
-			</li>
-			<li class="work__item">
-				<a href="#" class="work__image-wrap">
-					<img src="img/content/thumbnails/slim-be.jpg" alt="Slim-Be" />
-				</a>
-				<h2 class="work__title"><a href="#">Slim-Be</a></h2>
-				<p class="work__desc">Design, Front-end development</p>
-			</li>
-		</ul>
-		
-		<script src="js/jquery-1.12.0.min.js"></script>
+		<div class="page">
+			
+			<ul class="work">
+				<li class="work__item">
+					<a href="#" class="work__image-link">
+						<img src="img/work/beatsuite.jpg" class="work__image" alt="" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title">The BeatSuite</h2>
+						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+						<p>We helped the Beat Suite increase retention and loyalty for a second time with this enterprise-level e-commerce website and iTunes integration.</p>
+						<a href="#" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="#" class="work__image-link">
+						<img src="img/work/great-british-meat.jpg" class="work__image" alt="" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title">Great British Meat Co.</h2>
+						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+						<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
+						<a href="#" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="#" class="work__image-link">
+						<img src="img/work/pokerstars.jpg" class="work__image" alt="" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title">PokerStars.tv</h2>
+						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+						<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
+						<a href="#" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="#" class="work__image-link">
+						<img src="img/work/oobe.jpg" class="work__image" alt="" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title">oobe</h2>
+						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+						<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
+						<a href="#" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="#" class="work__image-link">
+						<img src="img/work/metropolis.jpg" class="work__image" alt="" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title">Metropolis Pictures</h2>
+						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+						<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
+						<a href="#" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="#" class="work__image-link">
+						<img src="img/work/dene.jpg" class="work__image" alt="" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title">Dene Films</h2>
+						<h4 class="work__sub-title">Web Design / Front-end dev</h4>
+						<p>We helped PokerStars leverage the power of online video content to drive cross-platform acquisition for the World’s biggest online poker brand</p>
+						<a href="#" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="#" class="work__image-link">
+						<img src="img/work/dartmoor.jpg" class="work__image" alt="" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title">Moor Than Meets the Eye</h2>
+						<h4 class="work__sub-title">Design</h4>
+						<p>We helped the Beat Suite increase retention and loyalty for a second time with this enterprise-level e-commerce website and iTunes integration.</p>
+						<a href="#" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+			</ul>
+							
+		</div>
+
+		<!-- Scripts -->
+		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+		<script>window.jQuery || document.write('<script src="js/jquery-3.1.1.min.js"><\/script>')</script>
+		<script src="js/pace.js"></script>
+		<script src="js/svg4everybody.min.js"></script>
 		<script src="js/main.js"></script>
-		
+
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 		<script>
 			(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -99,7 +157,7 @@
 			r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
 			ga('create','UA-XXXXX-X','auto');ga('send','pageview');
 		</script>
-		
+
 	</body>
-	
+
 </html>
