--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 		
 		<div class="page">
 			
+			<img src="img/content/logo.png" alt="Moy made this" style="float: left; height: 102px; margin: -40px 0 0 40px; width: 102px;" />
+			
 			<ul class="work">
 				<li class="work__item">
 					<a href="#" class="work__image-link">
