--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
 			<ul class="work">
 				<li class="work__item">
 					<a href="#" class="work__image-link">
-						<img src="img/work/beatsuite.jpg" class="work__image" alt="" />
-					</a>
-					<div class="work__desc">
-						<h2 class="work__title">The BeatSuite</h2>
-						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
-						<p>We helped the Beat Suite increase retention and loyalty for a second time with this enterprise-level e-commerce website and iTunes integration.</p>
-						<a href="#" class="btn case__btn">View Case Study</a>
-					</div>
-				</li>
-				<li class="work__item">
-					<a href="#" class="work__image-link">
 						<img src="img/work/great-british-meat.jpg" class="work__image" alt="" />
 					</a>
 					<div class="work__desc">
 						<h2 class="work__title">Great British Meat Co.</h2>
 						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
 						<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
+						<a href="#" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="#" class="work__image-link">
+						<img src="img/work/beatsuite.jpg" class="work__image" alt="" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title">The BeatSuite</h2>
+						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
+						<p>We helped the Beat Suite increase retention and loyalty for a second time with this enterprise-level e-commerce website and iTunes integration.</p>
 						<a href="#" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
@@ -103,6 +103,17 @@
 						<h2 class="work__title">oobe</h2>
 						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
 						<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
+						<a href="#" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="#" class="work__image-link">
+						<img src="img/work/oca.jpg" class="work__image" alt="" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title">Open College of the Arts</h2>
+						<h4 class="work__sub-title">Design</h4>
+						<p>We helped the Beat Suite increase retention and loyalty for a second time with this enterprise-level e-commerce website and iTunes integration.</p>
 						<a href="#" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
