--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 	<head>
 
-		<title>Home &middot; Future&Co.</title>
+		<title>Home &middot; Moymadethis</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" type="image/ico" href="favicon.ico">
+<!-- 		<link rel="shortcut icon" type="image/ico" href="favicon.ico"> -->
 		<link rel="shortcut icon" href="favicon.png" sizes="32x32">
 
 		<!--iOS -->
@@ -30,11 +30,11 @@
 
 		<!-- Facebook/Twitter -->
 		<meta name="twitter:card" content="summary">
-		<meta name="twitter:site" content="@futureandco">
-		<meta name="twitter:url" property="og:url" content="https://futureandco.tv/">
+		<meta name="twitter:site" content="@moymadethis">
+		<meta name="twitter:url" property="og:url" content="https://moymadethis.com">
 		<meta name="twitter:title" property="og:title" content="Film Production, Website Design &#38; Development by Future&#38;Co.">
 		<meta name="twitter:description" property="og:description" content="Future&#38;Co. are an integrated digital production company creating award winning work in film, animation, web and mobile for agencies and brands all over the world.">
-		<meta name="twitter:image" property="og:image" content="https://futureandco.tv/img/site/social-logo.png">
+		<meta name="twitter:image" property="og:image" content="/img/site/social-logo.png">
 
 		<!-- Windows -->
 		<meta name="msapplication-TileColor" content="#0d0f0f">
@@ -59,23 +59,25 @@
 		
 		<div class="page">
 			
-			<img src="img/content/logo.png" alt="Moy made this" style="float: left; height: 102px; margin: -40px 0 0 40px; width: 102px;" />
-			
+			<header class="page-head">
+				<img src="img/site/logo.png" class="page-head__logo" alt="Online portfolio of Stephen Moy" />
+			</header>
+						
 			<ul class="work">
 				<li class="work__item">
-					<a href="#" class="work__image-link">
-						<img src="img/work/great-british-meat.jpg" class="work__image" alt="" />
+					<a href="great-british-meat-co.html" class="work__image-link">
+						<img src="img/content/work/gbm/tile/great-british-meat.jpg" class="work__image" alt="Great British Meat Company" />
 					</a>
 					<div class="work__desc">
-						<h2 class="work__title">Great British Meat Co.</h2>
+						<h2 class="work__title"><a href="great-british-meat-co.html">Great British<br /> Meat Co.</a></h2>
 						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
 						<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
-						<a href="#" class="btn case__btn">View Case Study</a>
+						<a href="great-british-meat-co.html" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="#" class="work__image-link">
-						<img src="img/work/beatsuite.jpg" class="work__image" alt="" />
+					<a href="/beatsuite.html" class="work__image-link">
+						<img src="img/content/work/beatsuite/tile/beatsuite.jpg" class="work__image" alt="The Beat Suite" />
 					</a>
 					<div class="work__desc">
 						<h2 class="work__title">The BeatSuite</h2>
@@ -85,8 +87,8 @@
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="#" class="work__image-link">
-						<img src="img/work/pokerstars.jpg" class="work__image" alt="" />
+					<a href="/pokerstars.html" class="work__image-link">
+						<img src="img/content/work/pokerstars/tile/pokerstars.jpg" class="work__image" alt="Pokerstars" />
 					</a>
 					<div class="work__desc">
 						<h2 class="work__title">PokerStars.tv</h2>
@@ -96,8 +98,8 @@
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="#" class="work__image-link">
-						<img src="img/work/oobe.jpg" class="work__image" alt="" />
+					<a href="/oobe.html" class="work__image-link">
+						<img src="img/content/work/oobe/tile/oobe.jpg" class="work__image" alt="oobe landscape architects" />
 					</a>
 					<div class="work__desc">
 						<h2 class="work__title">oobe</h2>
@@ -107,8 +109,8 @@
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="#" class="work__image-link">
-						<img src="img/work/oca.jpg" class="work__image" alt="" />
+					<a href="/open-college-of-the-arts.html" class="work__image-link">
+						<img src="img/content/work/oca/tile/oca.jpg" class="work__image" alt="Open College of the Arts" />
 					</a>
 					<div class="work__desc">
 						<h2 class="work__title">Open College of the Arts</h2>
@@ -118,8 +120,8 @@
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="#" class="work__image-link">
-						<img src="img/work/metropolis.jpg" class="work__image" alt="" />
+					<a href="/metropolis.html" class="work__image-link">
+						<img src="img/content/work/metropolis/tile/metropolis.jpg" class="work__image" alt="Metropolis" />
 					</a>
 					<div class="work__desc">
 						<h2 class="work__title">Metropolis Pictures</h2>
@@ -129,19 +131,19 @@
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="#" class="work__image-link">
-						<img src="img/work/dene.jpg" class="work__image" alt="" />
+					<a href="/dene.html" class="work__image-link">
+						<img src="img/content/work/dene/tile/dene.jpg" class="work__image" alt="Dene Group" />
 					</a>
 					<div class="work__desc">
-						<h2 class="work__title">Dene Films</h2>
+						<h2 class="work__title">Dene Group</h2>
 						<h4 class="work__sub-title">Web Design / Front-end dev</h4>
 						<p>We helped PokerStars leverage the power of online video content to drive cross-platform acquisition for the World’s biggest online poker brand</p>
 						<a href="#" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="#" class="work__image-link">
-						<img src="img/work/dartmoor.jpg" class="work__image" alt="" />
+					<a href="/moor-than-meets-the-eye.html" class="work__image-link">
+						<img src="img/content/work/dartmoor/tile/dartmoor-moor-than-meets-the-eye.jpg" class="work__image" alt="Dartmoor, moor than meets the eye" />
 					</a>
 					<div class="work__desc">
 						<h2 class="work__title">Moor Than Meets the Eye</h2>
