Added more mastheads.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 
 		<!-- Favicon -->
-<!-- 		<link rel="shortcut icon" type="image/ico" href="favicon.ico"> -->
+		<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 		<link rel="shortcut icon" href="favicon.png" sizes="32x32">
 
 		<!--iOS -->
@@ -60,7 +60,9 @@
 		<div class="page">
 			
 			<header class="page-head">
-				<img src="img/site/logo.png" class="page-head__logo" alt="Online portfolio of Stephen Moy" />
+				<a href="#" class="page-head__home-link">
+					<img src="img/site/logo.png" class="page-head__logo" alt="Online portfolio of Stephen Moy" />
+				</a>
 			</header>
 						
 			<ul class="work">
@@ -71,7 +73,7 @@
 					<div class="work__desc">
 						<h2 class="work__title"><a href="great-british-meat-co.html">Great British<br /> Meat Co.</a></h2>
 						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
-						<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
+						<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website</p>
 						<a href="great-british-meat-co.html" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
@@ -93,7 +95,7 @@
 					<div class="work__desc">
 						<h2 class="work__title">PokerStars.tv</h2>
 						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
-						<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
+						<p>We helped PokerStars leverage the power of online video content to drive cross-platform acquisition for the World’s biggest online poker brand</p>
 						<a href="#" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
@@ -104,7 +106,7 @@
 					<div class="work__desc">
 						<h2 class="work__title">oobe</h2>
 						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
-						<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
+						<p>We helped OOBE captivate their audience with this minimalist and yet highly interactive responsive website that allows their stunning portfolio of work to really sing.</p>
 						<a href="#" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
@@ -115,7 +117,7 @@
 					<div class="work__desc">
 						<h2 class="work__title">Open College of the Arts</h2>
 						<h4 class="work__sub-title">Design</h4>
-						<p>We helped the Beat Suite increase retention and loyalty for a second time with this enterprise-level e-commerce website and iTunes integration.</p>
+						<p>We helped Open College of the Arts expand into new markets with this responsive e-commerce website, optimised for desktop, tablet and mobile devices.</p>
 						<a href="#" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
@@ -137,7 +139,7 @@
 					<div class="work__desc">
 						<h2 class="work__title">Dene Group</h2>
 						<h4 class="work__sub-title">Web Design / Front-end dev</h4>
-						<p>We helped PokerStars leverage the power of online video content to drive cross-platform acquisition for the World’s biggest online poker brand</p>
+						<p></p>
 						<a href="#" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
@@ -148,7 +150,7 @@
 					<div class="work__desc">
 						<h2 class="work__title">Moor Than Meets the Eye</h2>
 						<h4 class="work__sub-title">Design</h4>
-						<p>We helped the Beat Suite increase retention and loyalty for a second time with this enterprise-level e-commerce website and iTunes integration.</p>
+						<p></p>
 						<a href="#" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
