Updated work pages.

--- a/index.html
+++ b/index.html
@@ -78,58 +78,58 @@
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="/beatsuite.html" class="work__image-link">
+					<a href="beatsuite.html" class="work__image-link">
 						<img src="img/content/work/beatsuite/tile/beatsuite.jpg" class="work__image" alt="The Beat Suite" />
 					</a>
 					<div class="work__desc">
-						<h2 class="work__title">The BeatSuite</h2>
+						<h2 class="work__title"><a href="great-british-meat-co.html">The BeatSuite</a></h2>
 						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
 						<p>We helped the Beat Suite increase retention and loyalty for a second time with this enterprise-level e-commerce website and iTunes integration.</p>
-						<a href="#" class="btn case__btn">View Case Study</a>
+						<a href="beatsuite.html" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="/pokerstars.html" class="work__image-link">
+					<a href="pokerstars.html" class="work__image-link">
 						<img src="img/content/work/pokerstars/tile/pokerstars.jpg" class="work__image" alt="Pokerstars" />
 					</a>
 					<div class="work__desc">
-						<h2 class="work__title">PokerStars.tv</h2>
+						<h2 class="work__title"><a href="pokerstars.html">PokerStars</a></h2>
 						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
 						<p>We helped PokerStars leverage the power of online video content to drive cross-platform acquisition for the World’s biggest online poker brand</p>
-						<a href="#" class="btn case__btn">View Case Study</a>
+						<a href="pokerstars.html" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="/oobe.html" class="work__image-link">
+					<a href="oobe.html" class="work__image-link">
 						<img src="img/content/work/oobe/tile/oobe.jpg" class="work__image" alt="oobe landscape architects" />
 					</a>
 					<div class="work__desc">
-						<h2 class="work__title">oobe</h2>
+						<h2 class="work__title"><a href="oobe.html">OOBE</a></h2>
 						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
 						<p>We helped OOBE captivate their audience with this minimalist and yet highly interactive responsive website that allows their stunning portfolio of work to really sing.</p>
-						<a href="#" class="btn case__btn">View Case Study</a>
+						<a href="oobe.html" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="/open-college-of-the-arts.html" class="work__image-link">
+					<a href="open-college-of-the-arts.html" class="work__image-link">
 						<img src="img/content/work/oca/tile/oca.jpg" class="work__image" alt="Open College of the Arts" />
 					</a>
 					<div class="work__desc">
-						<h2 class="work__title">Open College of the Arts</h2>
+						<h2 class="work__title"><a href="open-college-of-the-arts.html">Open College of the Arts</a></h2>
 						<h4 class="work__sub-title">Design</h4>
 						<p>We helped Open College of the Arts expand into new markets with this responsive e-commerce website, optimised for desktop, tablet and mobile devices.</p>
-						<a href="#" class="btn case__btn">View Case Study</a>
+						<a href="open-college-of-the-arts.html" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="/metropolis.html" class="work__image-link">
+					<a href="metropolis.html" class="work__image-link">
 						<img src="img/content/work/metropolis/tile/metropolis.jpg" class="work__image" alt="Metropolis" />
 					</a>
 					<div class="work__desc">
-						<h2 class="work__title">Metropolis Pictures</h2>
+						<h2 class="work__title"><a href="metropolis.html">Metropolis Pictures</a></h2>
 						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
-						<p>We helped the Great British Meat Co. successfully launch their direct-to-consumer retail offering with this rich, engaging e-commerce website.</p>
-						<a href="#" class="btn case__btn">View Case Study</a>
+						<p></p>
+						<a href="metropolis.html" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
 				<li class="work__item">
