Mostly updating the metropolis page.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<img src="img/content/work/beatsuite/tile/beatsuite.jpg" class="work__image" alt="The Beat Suite" />
 					</a>
 					<div class="work__desc">
-						<h2 class="work__title"><a href="great-british-meat-co.html">The BeatSuite</a></h2>
+						<h2 class="work__title"><a href="beatsuite.html">The BeatSuite</a></h2>
 						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
 						<p>We helped the Beat Suite increase retention and loyalty for a second time with this enterprise-level e-commerce website and iTunes integration.</p>
 						<a href="beatsuite.html" class="btn case__btn">View Case Study</a>
@@ -128,30 +128,30 @@
 					<div class="work__desc">
 						<h2 class="work__title"><a href="metropolis.html">Metropolis Pictures</a></h2>
 						<h4 class="work__sub-title">Web Design + Front-end dev</h4>
-						<p></p>
+						<p>We were appointed to design and build a creative, quirky new portfolio website to showcase the talents of Metropolis Pictures' roster of world class commercial directors.</p>
 						<a href="metropolis.html" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="/dene.html" class="work__image-link">
+					<a href="dene.html" class="work__image-link">
 						<img src="img/content/work/dene/tile/dene.jpg" class="work__image" alt="Dene Group" />
 					</a>
 					<div class="work__desc">
-						<h2 class="work__title">Dene Group</h2>
+						<h2 class="work__title"><a href="dene.html">Dene Group</a></h2>
 						<h4 class="work__sub-title">Web Design / Front-end dev</h4>
 						<p></p>
-						<a href="#" class="btn case__btn">View Case Study</a>
+						<a href="dene.html" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
 				<li class="work__item">
-					<a href="/moor-than-meets-the-eye.html" class="work__image-link">
+					<a href="moor-than-meets-the-eye.html" class="work__image-link">
 						<img src="img/content/work/dartmoor/tile/dartmoor-moor-than-meets-the-eye.jpg" class="work__image" alt="Dartmoor, moor than meets the eye" />
 					</a>
 					<div class="work__desc">
-						<h2 class="work__title">Moor Than Meets the Eye</h2>
+						<h2 class="work__title"><a href="moor-than-meets-the-eye.html">Moor Than Meets the Eye</a></h2>
 						<h4 class="work__sub-title">Design</h4>
-						<p></p>
-						<a href="#" class="btn case__btn">View Case Study</a>
+						<p>We were invited by the Dartmoor National Park Authority (DNPA) to pitch for the design of their new "Moor than meets the eye" project website.</p>
+						<a href="moor-than-meets-the-eye.html" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
 			</ul>
