Updated links back to homepage.

--- a/oobe.html
+++ b/oobe.html
@@ -62,7 +62,7 @@
 			<div class="masthead masthead--oobe">
 				
 				<header class="page-head">
-					<a href="#" class="page-head__home-link">
+					<a href="index.html" class="page-head__home-link">
 						<img src="img/site/logo.png" class="page-head__logo" alt="Online portfolio of Stephen Moy" />
 					</a>
 				</header>
