--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="page">
 			
 			<header class="page-head">
-				<a href="#" class="page-head__home-link">
+				<a href="index.html" class="page-head__home-link">
 					<img src="img/site/logo.png" class="page-head__logo" alt="Online portfolio of Stephen Moy" />
 				</a>
 			</header>
