Added temp dene page.

--- a/dene.html
+++ b/dene.html
@@ -59,11 +59,11 @@
 		
 		<div class="page">
 			
-			<div class="masthead masthead--gbm">
+			<div class="masthead masthead--dene">
 				
 				<header class="page-head">
 					<a href="index.html" class="page-head__home-link">
-						<img src="img/site/logo.png" class="page-head__logo" alt="Online portfolio of Stephen Moy" />
+						<img src="img/site/logo-2.svg" class="page-head__logo" alt="Online portfolio of Stephen Moy" />
 					</a>
 				</header>
 				
