--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			
 			<header class="page-head">
 				<a href="index.html" class="page-head__home-link">
-					<img src="img/site/logo.png" class="page-head__logo" alt="Online portfolio of Stephen Moy" />
+					<img src="img/site/logo-2.svg" class="page-head__logo" alt="Online portfolio of Stephen Moy" />
 				</a>
 			</header>
 						
