--- a/index.html
+++ b/index.html
@@ -154,6 +154,72 @@
 						<a href="moor-than-meets-the-eye.html" class="btn case__btn">View Case Study</a>
 					</div>
 				</li>
+				<li class="work__item">
+					<a href="slim-be.html" class="work__image-link">
+						<img src="img/content/work/slim-be/tile/slim-be.jpg" class="work__image" alt="Slim-Be" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title"><a href="slim-be.html">Slim-Be</a></h2>
+						<h4 class="work__sub-title">Design + Front-end Dev</h4>
+						<p></p>
+						<a href="slim-be.html" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="education-world.html" class="work__image-link">
+						<img src="img/content/work/education-world/tile/education-world.jpg" class="work__image" alt="Education World" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title"><a href="education-world.html">Education World</a></h2>
+						<h4 class="work__sub-title">Design + Front-end Dev</h4>
+						<p>We helped Education World redefine personalised service, engaging north east schools and teachers with this responsive corporate website and smart customer dashboard.</p>
+						<a href="education-world.html" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="ferno.html" class="work__image-link">
+						<img src="img/content/work/ferno/tile/ferno.jpg" class="work__image" alt="Ferno" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title"><a href="ferno.html">Ferno</a></h2>
+						<h4 class="work__sub-title">Design + Front-end Dev</h4>
+						<p>We helped Ferno UK communicate a world class visual identity worthy of their position as market front-runner, with this product-focused corporate website.</p>
+						<a href="ferno.html" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="infinite-edge.html" class="work__image-link">
+						<img src="img/content/work/infinite-edge/tile/infinite-edge.jpg" class="work__image" alt="Infinite Edge" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title"><a href="infinite-edge.html">Infinite Edge</a></h2>
+						<h4 class="work__sub-title">Front-end Dev</h4>
+						<p>We helped Infinite Edge grow their design consultancy business with a beautiful corporate website that captured their unique approach to landscape design.</p>
+						<a href="infinite-edge.html" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="simple-data.html" class="work__image-link">
+						<img src="img/content/work/simple-data/tile/simple-data.jpg" class="work__image" alt="Simple Data" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title"><a href="simple-data.html">Simple Data</a></h2>
+						<h4 class="work__sub-title">Brand/Design + Front-end Dev</h4>
+						<p></p>
+						<a href="simple-data.html" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
+				<li class="work__item">
+					<a href="tte.html" class="work__image-link">
+						<img src="img/content/work/tte/tile/tte.jpg" class="work__image" alt="TTE" />
+					</a>
+					<div class="work__desc">
+						<h2 class="work__title"><a href="tte.html">TTE</a></h2>
+						<h4 class="work__sub-title">Design + Front-end Dev</h4>
+						<p>We helped TTE promote their technical apprenticeships to both students and employers with this clean, intuitive corporate website and content management system</p>
+						<a href="tte.html" class="btn case__btn">View Case Study</a>
+					</div>
+				</li>
 			</ul>
 							
 		</div>
