--- a/open-college-of-the-arts.html
+++ b/open-college-of-the-arts.html
@@ -68,7 +68,7 @@
 				</header>
 				
 				<div class="masthead__wrap">
-					<img src="img/content/work/oca/masthead/oca-device.png" class="masthead__image" alt="Open College " />
+					<img src="img/content/work/oca/masthead/oca-device.png" class="masthead__image" alt="Open College for the Arts" />
 				</div>
 				
 			</div>
