Created temp work page to compare against homepage.

--- a/work.html
+++ b/work.html
@@ -65,7 +65,7 @@
 				</a>
 			</header>
 						
-			<ul class="work">
+			<ul class="work work--alt">
 				<li class="work__item">
 					<a href="great-british-meat-co.html" class="work__image-link">
 						<img src="img/content/work/gbm/tile/great-british-meat.jpg" class="work__image" alt="Great British Meat Company" />
