--- a/index.html
+++ b/index.html
@@ -66,9 +66,13 @@
 			</header>
 			
 			<div class="wrap">
-				<h1>Alreet, pet.</h1>
-				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<h1>Moy made this, for real.</h1>
+				<p class="lead">I'm Stephen Moy a designer + front-end developer from Newcastle, England. Yep, where the beer's from.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<hr />
 			</div>
+			
+			
 						
 			<ul class="work">
 				<li class="work__item">
