--- a/index.html
+++ b/index.html
@@ -47,12 +47,6 @@
 		<!-- Script -->
 		<script src="js/modernizr-2.8.3.min.js"></script>
 
-		<!--[if lt IE 9]>
-			<script>
-				document.createElement('video');
-			</script>
-		<![endif]-->
-
 	</head>
 
 	<body>
@@ -96,9 +90,8 @@
 				<div class="masthead__wrap">
 					<h1>Moy made this,<br /> for real.</h1>
 					<hr />
-					<p class="lead">Stephen Moy is a designer + front-end developer from Newcastle, England.<br /> Yep, where the beer's from.</p>
-					<p>User experience, user interface and front-end design. I also project manage and provide design reviews.</p>
-					<p>If you'd like to speak to me about a project, please <a href="mailto:moymadethis@gmail.com">get in touch</a>.</p>				
+					<p class="lead">Stephen Moy is a designer + front-end developer straight outta Newcastle, England.<br /> Yep, where the beer's from.</p>
+					<p>With over 10 years commercial experience I specialise in user interface design + front-end development. If you'd like to have a chat about a project, please <a href="mailto:moymadethis@gmail.com">get in touch</a>.</p>				
 				</div>
 				<div class="mouse"></div>
 				<div id="metropallax" class="metropallax">
@@ -125,7 +118,7 @@
 				<div class="wrap">
 					
 					<div class="hgroup align-center">
-						<h1>Selected Work</h1>
+						<h1>Select Work</h1>
 						<hr />
 					</div>
 					
