--- a/about.html
+++ b/about.html
@@ -99,6 +99,12 @@
 					<p>Specialising in <del>bad jokes</del> user interface design and front-end development (HTML + CSS), I've worked on a wide array of projects and for clients from ranging from enormous corporates, tiny start-ups and individuals. I work closely with clients to plan and develop their projects, producing a high quality, crafted products. I set high standards and pride myself on my attention to detail, resulting in solid brand/design consistency and bulletproof functionality.</p>
 					<h4>What else?</h4>
 					<p>I occasionally moonlight as a footballer, described as "ever-reliable" by some but "crap" by most. So it’s a good job I enjoy being a football spectator, although Newcastle United do test the ‘enjoy’ part of that statement. I’ve also developed a penchant for jaunts overseas to watch matches with recent trips taking me Dortmund, Hamburg and Berlin.</p>
+					<figure>
+						<img src="img/content/about/map.jpg" alt="Map showing recent travel destinations and routes" />
+						<figcaption>
+							<p>Countries and cities I've traveled to over the last few years.</p>
+						</figcaption>
+					</figure>
 					<p>This branches from my love for travel and exploring new places. Over the last few years I’ve visited various places in the Czech Republic, Latvia, Hungary, Poland, Germany, Netherlands, Belgium and Denmark.</p>
 					<p>I have an eclectic taste in music, from Metallica to Bjork and everything in between. I play guitar, go to gigs and music festivals.</p>		
 					
