--- a/about.html
+++ b/about.html
@@ -101,11 +101,17 @@
 					<h4>Background</h4>
 					<p>With over 10 years commercial experience I honed my skills working at a handful of agencies in North East England. Or according to my mum, by colouring in the back of her new sofa with felt-tip pens ...and that was only last week, <em>boom-boom</em>.</p>
 					<p>Specialising in <del>bad jokes</del> user interface design and front-end development (HTML + CSS), I've worked on a wide array of projects and for clients from ranging from enormous corporates, tiny start-ups and individuals. I work closely with clients to plan and develop their projects, producing a high quality, crafted products. I set high standards and pride myself on my attention to detail, resulting in solid brand/design consistency and bulletproof functionality.</p>
+					<figure>
+						<img src="img/content/about/me-1.jpg" alt="Stephen Moy in Krakow's Main Square." />
+						<figcaption>
+							<p>Me in Krakow's Main Square. Genuinely didn't have a choice in this photo. I'm in the middle, on the right.</p>
+						</figcaption>
+					</figure>
 					<h4>What else?</h4>
 					<p>Occasionally I moonlight as a footballer, described as "ever-reliable" by some but "crap" by most. So it's a good job I enjoy being a football spectator, although Newcastle United test the 'enjoy' part on a regular basis. I’ve also developed a penchant for trips overseas to watch football matches. Recent jaunts have taken me to Dortmund, Leverkusen, Hamburg and Berlin. Ich liebe es nach Deutschland zu reisen und ich kann ein bisschen deutsch sprechen ...aber nicht so gut!</p>
 					<p>That compliments my love for travel and exploring new places. Over the last few years I've visited various places in the Czech Republic, Latvia, Hungary, Poland, Germany, Netherlands, Belgium, Denmark and Sweden.</p>
 					<figure class="bulge">
-						<img src="img/content/about/map.jpg" alt="Map showing recent travel destinations and routes" />
+						<img src="img/content/about/map.svg" alt="Map showing recent travel destinations and routes" />
 						<figcaption>
 							<p>Snapshot of countries and cities I've traveled to over the last few years.</p>
 						</figcaption>
