--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 					<figure style="margin: 40px 0">
 						<img src="img/content/about/me-2.jpg" alt="Stephen Moy in Krakow's Main Square." />
 						<figcaption>
-							<p>Me looking at something shiny.</p>
+							<p>Looking at something shiny, possibly food.</p>
 						</figcaption>
 					</figure>
 					<h4>What else?</h4>
