--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
 					<p>With over 10 years commercial experience I honed my skills working at a handful of agencies in North East England. Or according to my mum, by colouring in the back of her new sofa with felt-tip pens ...that was only last week, <em>boom-boom</em>.</p>
 					<p>Specialising in <del>bad jokes</del> user interface design and front-end development (HTML + CSS), I've worked on a wide array of projects and for clients from ranging from enormous corporates, tiny start-ups and individuals. I work closely with clients to plan and develop their projects, producing a high quality, crafted products. I set high standards and pride myself on my attention to detail, resulting in solid brand/design consistency and bulletproof functionality.</p>
 					<figure style="margin: 40px 0">
-						<img src="img/content/about/me-2.jpg" alt="Stephen Moy in Krakow's Main Square." />
+						<img src="img/content/about/me.jpg" alt="Stephen Moy, leaning against a wall." />
 						<figcaption>
 							<p>Looking at something shiny, possibly food.</p>
 						</figcaption>
